# UnRedactor

./: .gitignore  README.md  pyproject.toml
docs/: notes.md
scripts/: setup_project.sh
src/: image_processor.py  main.py  styler.py
src/app/: app.py  char_tester.py  result_displayer.py
src/app/utils/: app.py  margin.py  unredact.py  utils.py
tests/: test_main.py
