[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unredacter"
version = "0.1.0"
description = "A Python implementation of a program to unredact pixelated text."
readme = "README.md"
authors = [
    {name = "Thaddeus Thomas", email = "thaddeus.r.thomas@gmail.com"}
]

[options]
packages = find:
python_requires = ">=3.8"
